# my_first_genom

./: Makefile.am  README.adoc  configure.ac  my_first_genom-genom3-uninstalled.pc.in  my_first_genom-genom3.pc.in  my_first_genom.gen
codels/: Makefile.am  codels.h  controller.cc  geometry.cc  my_first_genom_codels.c  my_first_genom_main_codels.c  my_first_genom_wo_codels.txt
